deploy hazırlığı
